<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.market.view.MarketFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:paddingTop="16dp"
            android:paddingHorizontal="16dp">

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/ic_launcher_foreground"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_greetings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/greetings_user"
                android:textSize="20sp"
                android:textColor="@color/title_text_color"
                android:fontFamily="@font/mulish_semi_bold"
                android:layout_marginStart="12dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_profile" />

            <TextView
                android:id="@+id/tv_currency_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency_selection"
                android:textSize="20sp"
                android:textColor="@color/title_text_color"
                android:layout_marginTop="18dp"
                android:layout_marginStart="32dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_greetings"
                app:layout_constraintStart_toEndOf="@+id/iv_profile" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:singleSelection="true"
                android:layout_marginTop="18dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_currency_title"
                app:chipSpacingHorizontal="20dp">
                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_ars"
                    android:theme="@style/Theme.MaterialComponents.Bridge"
                    style="@style/customChipButton"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ars"
                    android:checked="true"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_usd"
                    android:theme="@style/Theme.MaterialComponents.Bridge"
                    style="@style/customChipButton"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/usd"
                    android:checked="false"/>
            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/tv_watchlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/watchlist"
                android:fontFamily="@font/mulish_regular"
                android:textSize="14sp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/chip_group"
                app:layout_constraintStart_toStartOf="parent" />

            <include
                android:id="@+id/error_layout"
                layout="@layout/error_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/tv_watchlist"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cryptos_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="vertical"
                tools:listitem="@layout/crypto_currency_adapter_layout"
                tools:itemCount="10"
                app:layout_constraintTop_toBottomOf="@id/tv_watchlist" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>